--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,16 @@
-header{
-    background-color: aqua;
-    h1{font-size: 40px;}
-}
+@import url('https://fonts.googleapis.com/css2?family=Days+One&family=Faster+One&family=Open+Sans:wght@300&display=swap');
+
+/*CSS Rules
+font-family: 'Days One', sans-serif;
+font-family: 'Faster One', cursive;
+font-family: 'Open Sans', sans-serif;
+**/
+@import"../base/reset";
+
+@import"../components/_bootstrap";
+
+@import"../scss/layout/header-index";
+
+
+
+
