--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Days+One&family=Faster+One&family=Open+Sans:wght@300&display=swap");
+/*CSS Rules
+font-family: 'Days One', sans-serif;
+font-family: 'Faster One', cursive;
+font-family: 'Open Sans', sans-serif;
+**/
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box; }
+
 header {
-  background-color: aqua; }
-  header h1 {
-    font-size: 40px; }
+  background-color: blue; }
+
+header {
+  background-color: brown; }
