intro a Motocicletas-html

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,11 @@ font-family: 'Open Sans', sans-serif;
 
 @import"../scss/layout/media-queries";
 
+@import"../scss/base/typo";
+
+@import"../scss/layout/footer-index";
+
+@import"../scss/components/buttons";
 
 
 
