--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,42 @@ font-family: 'Days One', sans-serif;
 font-family: 'Faster One', cursive;
 font-family: 'Open Sans', sans-serif;
 **/
+@import url("https://fonts.googleapis.com/css2?family=Days+One&family=Faster+One&family=Open+Sans:wght@300&display=swap");
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box; }
+
+.texto-faster {
+  font-family: 'Faster One', cursive !important; }
+
+.texto-mitad {
+  font-family: 'Days One', sans-serif !important; }
+
+.titulo-mitad {
+  font-family: 'Days One', sans-serif !important; }
+
+.list-footer {
+  list-style: none; }
+  .list-footer a {
+    text-decoration: none; }
+
+.btn-wsp {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  line-height: 55px;
+  bottom: 25px;
+  right: 25px;
+  background: #25d366;
+  color: #FFF;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 35px;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
+  z-index: 100;
+  transition: all 300ms ease; }
+
+.btn-wsp:hover {
+  background: #20ba5a;
+  text-decoration: none; }
