2 parte Motocicletas-html

--- a/scss/base/_typo.scss
+++ b/scss/base/_typo.scss
@@ -11,3 +11,11 @@
 .titulo-mitad{
     font-family: 'Days One', sans-serif !important;
 }
+
+.ban-2{
+    font-family: 'Days One', sans-serif !important;
+}
+
+.letra-G{
+    font-family: 'Days One', sans-serif !important;
+}
