--- a/scss/layout/_header-index.scss
+++ b/scss/layout/_header-index.scss
@@ -1,1 +1,6 @@
+.ban-2{
+    background-image: url(../sources/img/banner_2.jpg);
+    background-size: cover;
+    background-position: center;
+}
 
