--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,11 @@ font-family: 'Open Sans', sans-serif;
   margin: 0;
   box-sizing: border-box; }
 
+.ban-2 {
+  background-image: url(../sources/img/banner_2.jpg);
+  background-size: cover;
+  background-position: center; }
+
 .texto-faster {
   font-family: 'Faster One', cursive !important; }
 
@@ -17,6 +22,12 @@ font-family: 'Open Sans', sans-serif;
   font-family: 'Days One', sans-serif !important; }
 
 .titulo-mitad {
+  font-family: 'Days One', sans-serif !important; }
+
+.ban-2 {
+  font-family: 'Days One', sans-serif !important; }
+
+.letra-G {
   font-family: 'Days One', sans-serif !important; }
 
 .list-footer {
