--- a/scss/base/_typo.scss
+++ b/scss/base/_typo.scss
@@ -16,6 +16,10 @@
     font-family: 'Days One', sans-serif !important;
 }
 
+.ban-3{
+    font-family: 'Days One', sans-serif !important;
+}
+
 .letra-G{
     font-family: 'Days One', sans-serif !important;
 }
