--- a/scss/layout/_header-index.scss
+++ b/scss/layout/_header-index.scss
@@ -4,3 +4,14 @@
     background-position: center;
 }
 
+.ban-3{
+    background-image: url(../sources/img/banner_3.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.ban-4{
+    background-image: url(../sources/img/banner_4.jpg);
+    background-size: cover;
+    background-position: center;
+}
